@@ -12,6 +12,7 @@ UNRELEASED CHANGES:
 * Fix how comparing version is done
 * Fix search with wrong search field
 * Fix gift recipient relation
+* Fix subscription cancel on account deletion
 
 RELEASED VERSIONS:
 
